# islandora_workbench_gui

./: .gitignore  Cargo.toml
crates/app/: Cargo.toml
crates/app/src/: app_menus.rs  main.rs  path_picker.rs  settings.rs  workspace.rs
crates/app/src/settings/: custom_fields.rs  db.rs  mod.rs  pages.rs
crates/window-wrapper/: Cargo.toml
crates/window-wrapper/src/: status_bar.rs  title_bar.rs
crates/window_wrapper/: Cargo.toml
crates/window_wrapper/src/: lib.rs  status_bar.rs  title_bar.rs
crates/workbench-integration/: Cargo.toml
crates/workbench-integration/src/: lib.rs
