[package]
name = "app"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true

window_wrapper = { path = "../window_wrapper" }